fixed weird download buttons off center

--- a/css/style.css
+++ b/css/style.css
@@ -107,10 +107,11 @@ div{
 }
 
 .downloadbuttons{
-    width: 80%;
+    width: 100%;
     display: flex;
-    margin:0 auto;
-    justify-content: space-between;
+    justify-content: space-around;
+    justify-items: center;
+    align-items: center;
 }
 
 .downloadbutton{
